# aris-cloud-3

./: .env.example  .gitignore  ARIS_CONTROL_2.spec  AUDIT_BACKEND_API.json  AUDIT_BACKEND_API.md  CHANGELOG.md  README.md  alembic.ini  pyproject.toml  requirements.txt
ARIS_CONTROL_2/: .env.example  .gitignore  README.md  pyproject.toml
ARIS_CONTROL_2/aris_control_2/: main.py
ARIS_CONTROL_2/aris_control_2/app/: admin_console.py  config.py  context_store.py  diagnostics.py  error_presenter.py  feature_flags.py  gui_app.py  gui_controller.py  gui_views.py  listing_cache.py  main.py  navigation_shell.py  operational_support.py  session_guard.py  state.py  tenant_context.py
ARIS_CONTROL_2/aris_control_2/app/application/: mutation_attempts.py
ARIS_CONTROL_2/aris_control_2/app/application/state/: session_state.py
ARIS_CONTROL_2/aris_control_2/app/application/use_cases/: create_store_use_case.py  create_user_use_case.py  list_stores_use_case.py  list_users_use_case.py  load_me_use_case.py  login_use_case.py  select_tenant_use_case.py  (+1 more)
ARIS_CONTROL_2/aris_control_2/app/export/: csv_exporter.py
ARIS_CONTROL_2/aris_control_2/app/ui/: filters.py  forms.py  listing_view.py  pagination.py  permission_map.py  table_printer.py
ARIS_CONTROL_2/aris_control_2/clients/aris3_client_sdk/: auth_store.py  http_client.py  tracing.py
ARIS_CONTROL_2/clients/aris3_client_sdk/: __init__.py  auth_client.py  config.py  errors.py  http_client.py  idempotency.py  me_client.py  normalizers.py  stores_client.py  tenants_client.py  users_client.py
ARIS_CONTROL_2/docs/: 01_MANUAL_OPERATIVO.md  02_UAT_FINAL_CHECKLIST.md  03_RELEASE_RUNBOOK.md  04_OPERACION_DIARIA.md  05_DAY6_ROLLBACK_DRILL.md  06_DAY7_GO_NO_GO_MEMO.md  V1_0_2_DEV_CHANGELOG.md  V1_0_2_TECH_BACKLOG_TOP10.md
ARIS_CONTROL_2/packaging/: control_center.spec.template
ARIS_CONTROL_2/scripts/windows/: build_control_center.ps1  day6_guided_e2e_smoke.ps1  package_release_notes.ps1  preflight_release.ps1  run_control_center_dev.ps1  smoke_release.ps1
ARIS_CONTROL_2/tests/integration/: test_login_me_context.py  test_login_me_effective_tenant.py  test_retry_timeout_behavior.py  test_stores_tenant_scope.py  test_tenant_switch_state_reset.py  test_uat_guardrails_and_idempotency.py  test_users_actions_rbac_ui_guard.py  test_users_tenant_scope_and_actions.py
ARIS_CONTROL_2/tests/unit/: test_admin_clients.py  test_admin_console_feedback.py  test_admin_console_guards.py  test_admin_guards_still_hold.py  test_admin_list_query_params.py  test_admin_module_mutations_contract.py  test_app_config_defaults.py  test_auth_me_clients.py  test_config.py  test_config_defaults.py  test_csv_exporter.py  test_day1_kickoff_quickwins.py  test_day2_listing_state_and_debounce.py  test_day2_navigation_shell_routes.py  test_day2_permission_map.py  test_day2_tenant_context_resolver.py  test_day3_bulk_users_guardrails.py  test_day4_advanced_listing.py  test_day4_rbac_and_tenant_scope.py  test_day4_session_hardening.py  test_day5_diagnostics_and_context.py  test_day5_listing_cache_and_refresh.py  test_day5_state_and_network_resilience.py  test_day5_support_package.py  test_error_mapper.py  test_errors.py  test_form_validation_day2.py  test_gui_app_authenticated_modules.py  test_gui_app_login_navigation.py  test_gui_controller.py  test_idempotency_key_factory.py  test_key_factory.py  test_main_api_diagnostics.py  test_mutation_attempts.py  test_mutation_feedback.py  test_normalizers.py  test_observability_log_contract.py  test_pagination_ui_state.py  test_permission_gate.py  test_readme_docs_links.py  (+7 more)
clients/python/aris3_client_sdk/: README.md  pyproject.toml
clients/python/aris_control_center_app/: README.md  pyproject.toml
clients/python/aris_core_3_app/: README.md  pyproject.toml
(+776 files in other folders)
