[project]
name = "aris-cloud-3"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true

