[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aris-control-2"
version = "0.1.0"
description = "ARIS Control 2 bootstrap client shell"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aris_control_2*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
