[project]
name = "aris3-client-sdk"
version = "0.1.0"
description = "ARIS 3 Python client SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "requests>=2.32",
  "platformdirs>=4.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
