[project]
name = "aris3-client-sdk"
version = "1.1.1"
description = "ARIS 3 Python client SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "requests>=2.32",
  "platformdirs>=4.2",
  'tomli>=2.0; python_version < "3.11"',
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "responses>=0.25",
  "ruff>=0.5",
  "types-requests>=2.32",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["../tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
ignore_missing_imports = true
files = ["src/aris3_client_sdk"]
